--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -44,31 +44,13 @@
 
   <body>
     <!-- Fixed navbar -->
-    <div class="navbar navbar-fixed-top" role="navigation">
-      <div class="container">
+    <div class="navbar navbar-default" role="navigation">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="{% url 'home' %}">SMRUE</a>
           <ul class="nav navbar-nav">
             <li><a href="{% url 'admin:index' %}">Admin</a></li>
             <li><a href="{% url 'equipment:list' %}">Equipamentos</a></li>
-          
-            <!-- <li class="dropdown">
-              <a href="#" class="dropdown-toggle navbar-brand" data-toggle="dropdown"><span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                  <li><a href="{% url 'home' %}">Home</a></li>
-                  {% if user.is_authenticated %}
-                    {% if user.is_staff %}
-                      <li><a href="{% url 'admin:index' %}">Admin</a></li>
-                    {% endif %}
-                  {% endif %}
-              </ul>
-            </li> -->
           </ul>
         </div>
 
@@ -87,6 +69,7 @@
       </div>
     </div>
 
+    <div class="container">
       {% block content %}
 
       {% endblock %}
@@ -99,7 +82,8 @@
         </div>
       </footer>
 
+      {% block js_bottom %}
+      {% endblock %}
     </div> <!-- /container -->
-
   </body>
 </html>
