--- a/smrue/templates/home.html
+++ b/smrue/templates/home.html
@@ -2,13 +2,14 @@
 
 {% block css %}
 	<style type="text/css">
-		.home-button {
+		.home-button, .home-button:focus {
 			background: rgb(26, 205, 217);
 		  line-height: 100px;
 		  text-align: center;
 		  color: white;
 		  font-weight: normal;
 		  font-size: 24px;
+		  text-decoration: none;
 		}
 
 		.home-button:hover {
@@ -22,7 +23,7 @@
 {% block content %}
 	<div class="container">
 	  <div class="page-header">
-	    <h1>SMRUE</h1>
+	    <h1>Bem vindo!</h1>
 	  </div>
 
 	  <div class="row">
