Adicionada listagem e add de metas

--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -52,6 +52,7 @@
             <li><a href="{% url 'admin:index' %}">Admin</a></li>
             <li><a href="{% url 'equipment:list' %}">Equipamentos</a></li>
             <li><a href="{% url 'sensor:list' %}">Sensores</a></li>
+            <li><a href="{% url 'goal:list' %}">Metas</a></li>
           </ul>
         </div>
 
