--- a/equipment/templates/equipment/list.html
+++ b/equipment/templates/equipment/list.html
@@ -27,38 +27,9 @@
 		<td>{{item.name}}</td>
 		<td>{{item.nominal_power}}</td>
 		<td class="text-center">
-			<button data-toggle="modal" data-target=".modal" class="delete-button" value="{% url 'equipment:delete' pk=item.pk %}">Delete</button>
+			<button data-toggle="modal" data-target=".modal" class="delete-button" value="{% url 'equipment:delete' pk=item.pk %}">Remover</button>
 		</td>
 	</tr>
-
 {% endfor %}
-
-<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<form id="delete-form" action method="post">
-
-				{% csrf_token %}
-				
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				</div>
-
-				<div class="modal-body">
-					<p>Tem certeza que quer deletar {{ item }}?</p>
-				</div>
-
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-					<button type="submit" class="btn btn-primary" value="Deletar">Deletar</button>
-				</div>
-
-			</form>
-		</div>
-	</div>
-</div>
-
 </tbody>
-
-
 {% endblock %}
