--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -51,6 +51,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{% url 'admin:index' %}">Admin</a></li>
             <li><a href="{% url 'equipment:list' %}">Equipamentos</a></li>
+            <li><a href="{% url 'sensor:list' %}">Sensores</a></li>
           </ul>
         </div>
 
