--- a/smrue/templates/home.html
+++ b/smrue/templates/home.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
+{% load static from staticfiles %}
+
+{% block js %}
+{% static "jquery-ui/jquery-ui.min.js" as jquery_ui %}
+{% static "jquery-jqplot/jquery.jqplot.min.js" as jqplot_js %}
+<script src="{{jquery_ui}}"></script>
+<script src="{{jqplot_js}}" type="text/javascript"></script>
+{% endblock %}
 
 {% block css %}
+	{% static "jquery-jqplot/jquery.jqplot.min.css" as jqplot_css %}
+	<link rel="stylesheet" type="text/css" href="{{jqplot_css}}">
 	<style type="text/css">
 		.home-button, .home-button:focus {
 			background: rgb(26, 205, 217);
