--- a/goal/templates/goal/list.html
+++ b/goal/templates/goal/list.html
@@ -32,7 +32,15 @@
     <td>{{item.yearmonth_end}}</td>
     
     <td class="text-center">
-      <button data-toggle="modal" data-target=".modal" class="delete-button" value="{% url 'goal:delete' pk=item.pk %}">Delete</button>
+      <button class="btn btn-danger" data-toggle="modal" data-target=".modal" class="delete-button" value="{% url 'goal:delete' pk=item.pk %}">
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+        Deletar
+      </button>
+
+      <a class="btn btn-default" href="{% url 'goal:update' pk=item.pk %}">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        Editar
+      </a>
     </td>
   </tr>
 
