--- a/smrue/templates/home.html
+++ b/smrue/templates/home.html
@@ -32,9 +32,16 @@
 
 {% block content %}
 	<div class="container">
+		<div class="jumbotron">
+		  <h1>Bem vindo!</h1>
+		  <p>Este é o seu sistema de monitoramento residencial de uso de energia!</p>
+		  <p><a class="btn btn-primary btn-lg" href="{{config_user_link}}" role="button">Clique aqui para começar</a></p>
+		</div>
+
 	  <div class="page-header">
-	    <h1>Bem vindo!</h1>
+	    <h1></h1>
 	  </div>
+
 
 	  <div class="row">
 	    <div class="col-xs-6 col-md-3">
