--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -50,7 +50,7 @@
           <a class="navbar-brand" href="{% url 'home' %}">SMRUE</a>
           <ul class="nav navbar-nav">
             <li><a href="{% url 'admin:index' %}">Admin</a></li>
-            <li><a href="{% url 'consumption:graphic' %}">Consumo</a></li>
+            <li><a href="#">Consumo</a></li>
             <li><a href="{% url 'equipment:list' %}">Equipamentos</a></li>
             <li><a href="{% url 'sensor:list' %}">Sensores</a></li>
             <li><a href="{% url 'configuration:config' %}">Configurações</a></li>
