login and logout added

--- a/smrue/templates/home.html
+++ b/smrue/templates/home.html
@@ -14,18 +14,18 @@
 	<style type="text/css">
 		.home-button, .home-button:focus {
 			background: rgb(26, 205, 217);
-		  line-height: 100px;
-		  text-align: center;
-		  color: white;
-		  font-weight: normal;
-		  font-size: 24px;
-		  text-decoration: none;
+			line-height: 100px;
+			text-align: center;
+			color: white;
+			font-weight: normal;
+			font-size: 24px;
+			text-decoration: none;
 		}
 
 		.home-button:hover {
 			background: rgb(26, 158, 167);
-		  text-decoration: none;
-		  color: white;
+			text-decoration: none;
+			color: white;
 		}
 	</style>
 {% endblock %}
@@ -33,40 +33,42 @@
 {% block content %}
 	<div class="container">
 		<div class="jumbotron">
-		  <h1>Bem vindo!</h1>
-		  <p>Este é o seu sistema de monitoramento residencial de uso de energia!</p>
-		  <p><a class="btn btn-primary btn-lg" href="{{config_user_link}}" role="button">Clique aqui para começar</a></p>
+			<h1>Bem vindo!</h1>
+			<p>Este é o seu sistema de monitoramento residencial de uso de energia!</p>
+			{% if not current_user %}
+				<p><a class="btn btn-primary btn-lg" <a href="{% url 'configuration:user' %}" role="button">Clique aqui para começar</a></p>
+			{% endif %}
 		</div>
 
-	  <div class="page-header">
-	    <h1></h1>
-	  </div>
+		<div class="page-header">
+			<h1></h1>
+		</div>
 
 
-	  <div class="row">
-	    <div class="col-xs-6 col-md-3">
-	      <a href="#" class="thumbnail home-button">
-	        Equipamentos
-	      </a>
-	    </div>
+		<div class="row">
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail home-button">
+					Equipamentos
+				</a>
+			</div>
 
-	    <div class="col-xs-6 col-md-3">
-	      <a href="#" class="thumbnail home-button">
-	        Metas
-	      </a>
-	    </div>
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail home-button">
+					Metas
+				</a>
+			</div>
 
-	    <div class="col-xs-6 col-md-3">
-	      <a href="#" class="thumbnail home-button">
-	        Metas
-	      </a>
-	    </div>
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail home-button">
+					Metas
+				</a>
+			</div>
 
-	    <div class="col-xs-6 col-md-3">
-	      <a href="#" class="thumbnail home-button">
-	        Metas
-	      </a>
-	    </div>
-	  </div>
+			<div class="col-xs-6 col-md-3">
+				<a href="#" class="thumbnail home-button">
+					Metas
+				</a>
+			</div>
+		</div>
 	</div>
 {% endblock %}
