date range do gráfico escolhível

--- a/consumption/templates/consumption/graphic.html
+++ b/consumption/templates/consumption/graphic.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="../plugins/jqplot.barRenderer.min.js"></script>
 
 {% block js %}
+{% static "bootstrap-daterangepicker/moment.js" as moment_js %}
 {% static "jquery-jqplot/jquery.jqplot.min.js" as jqplot_js %}
 {% static "jquery-jqplot/plugins/jqplot.highlighter.min.js" as jqplot_highlighter_js %}
 {% static "jquery-jqplot/plugins/jqplot.cursor.min.js" as jqplot_cursor_js %}
@@ -26,6 +27,8 @@
 {% static "jquery-jqplot/plugins/jqplot.barRenderer.min.js" as jqplot_barRenderer_js %}
 {% static "javascript/data_plotter.js" as data_plotter %}
 {% static "bootstrap-daterangepicker/daterangepicker.js" as daterangepicker_js %}
+{% static "javascript/date_range_picker_past_only.js" as date_range_picker_js %}
+<script src="{{moment_js}}"></script>
 <script src="{{jqplot_js}}"></script>
 <script src="{{jqplot_highlighter_js}}"></script>
 <script src="{{jqplot_cursor_js}}"></script>
@@ -33,6 +36,7 @@
 <script src="{{jqplot_barRenderer_js}}"></script>
 <script src="{{data_plotter}}"></script>
 <script src="{{daterangepicker_js}}"></script>
+<script src="{{date_range_picker_js}}"></script>
 {% endblock %}
 
 {% block content %}
@@ -48,6 +52,13 @@
     <div class="col-sm-3">
       Filtro <br/>
       <label>Data: </label><input class="date-range-picker form-control"/>
+      <label>Unidade de medida: </label>
+      <select>
+        {% for acronym, v in measurement_units %}
+            <option value="{{acronym}}">{{ v }}</option>
+        {% endfor %}
+      </select>
+      
     </div>
     <div class="col-sm-9">
       <div class="loading-gif"></div>
