form calling removed from consumption

--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -53,7 +53,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-left">
             <li><a href="{% url 'admin:index' %}">Admin</a></li>
-            <li><a href="#">Consumo</a></li>
+            <li><a href="{% url 'consumption:graphic' %}">Consumo</a></li>
             <li><a href="{% url 'equipment:list' %}">Equipamentos</a></li>
             <li><a href="{% url 'sensor:list' %}">Sensores</a></li>
             <li><a href="{% url 'configuration:config' %}">Configurações</a></li>
