--- a/consumption/templates/consumption/graphic.html
+++ b/consumption/templates/consumption/graphic.html
@@ -9,12 +9,14 @@
 {% block css %}
 {% static "jquery-jqplot/jquery.jqplot.min.css" as jqplot_css %}
 {% static "css/application.css" as app_css %}
-{% static "bootstrap-daterangepicker/daterangepicker-bs3.css" as daterangepicker_css %}
-{% static "bootstrap-timepicker/css/bootstrap-timepicker.min.css" as datetimepicker_css %}
+{% static "bootstrap-daterangepicker/daterangepicker.css" as daterangepicker_css %}
+{% static "bootstrap-timepicker/css/bootstrap-timepicker.min.css" as timepicker_css %}
+{% static "bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" as datetimepicker_css %}
 
 <link href="{{daterangepicker_css}}" rel="stylesheet">
 <link href="{{jqplot_css}}" rel="stylesheet">
 <link href="{{app_css}}" rel="stylesheet">
+<link href="{{timepicker_css}}" rel="stylesheet">
 <link href="{{datetimepicker_css}}" rel="stylesheet">
 <!-- <link href="{{loading_gif}}" rel="image"> -->
 {% endblock %}
@@ -22,7 +24,7 @@
 <script type="text/javascript" src="../plugins/jqplot.barRenderer.min.js"></script>
 
 {% block js %}
-{% static "bootstrap-daterangepicker/moment.js" as moment_js %}
+{% static "bootstrap-datetimepicker/moment.min.js" as moment_js %}
 {% static "jquery-jqplot/jquery.jqplot.min.js" as jqplot_js %}
 {% static "jquery-jqplot/plugins/jqplot.highlighter.min.js" as jqplot_highlighter_js %}
 {% static "jquery-jqplot/plugins/jqplot.cursor.min.js" as jqplot_cursor_js %}
@@ -33,7 +35,10 @@
 {% static "javascript/date_time_range_picker_past_only.js" as date_time_range_picker_js %}
 {% static "javascript/date_range_picker_past_only.js" as date_range_picker_js %}
 {% static "bootstrap-timepicker/js/bootstrap-timepicker.js" as timepicker_js %}
+{% static "bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js" as datetimepicker_js %}
 {% static "javascript/time_picker_time_only.js" as time_picker_js %}
+{% static "javascript/year_month_range_picker_past_only.js" as year_month_past_js %}
+
 
 <script src="{{moment_js}}"></script>
 <script src="{{jqplot_js}}"></script>
@@ -46,7 +51,10 @@
 <script src="{{date_time_range_picker_js}}"></script>
 <script src="{{date_range_picker_js}}"></script>
 <script src="{{timepicker_js}}"></script>
+<script src="{{datetimepicker_js}}"></script>
 <script src="{{time_picker_js}}"></script>
+<script src="{{year_month_past_js}}"></script>
+
 {% endblock %}
 
 {% block content %}
@@ -61,22 +69,56 @@
 
   <div class="row">
     <div class="col-sm-3">
-      Filtro <br/>
-      <label>Data (por hora): </label><input class="single-date-range-picker form-control"/>
-      de <input class="time-picker from-time"> a <input class="time-picker to-time">
-      <button class="hourly-plot">Faz o grafico pra mim</button>
 
-      <label>Data (por dia): </label><input class="date-range-picker form-control"/>
+      <!-- Nav tabs -->
+      <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Hora</a></li>
+        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Dia</a></li>
+        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Mês</a></li>
+        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Integrar</a></li>
+      </ul>
 
-      <button class="integrate">Integrate Plot</button>
-      <button class="power">Go back</button>
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="home">
+          <div class="col-sm-12">
+            <!-- Filtro por hora -->
+            <label>Data (por hora): </label><input class="date-time-range-picker form-control"/>
+            <button class="hourly-plot">Faz o grafico pra mim (hora)</button>
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="profile">
+          <div class="col-sm-12">
+            <!-- Filtro por dia -->
+            <label>Data (por dia): </label><input class="date-range-picker form-control"/>
+            <button class="daily-plot">Faz o grafico pra mim (dia)</button>
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="messages">
+          <div class="col-sm-12">
+            <!-- Filtro por mês -->
+            <label>Data (por mês): </label>
+            <input class="year-month-range-picker-past"/>
+            <button class="monthly-plot">Faz o grafico pra mim (mês)</button>
+          </div>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="settings">
+          <div class="col-sm-12">
+            <button class="integrate">Integrate Plot</button>
+            <button class="power">Go back</button>
+          </div>
+          <label>Unidade de medida: </label>
+          <select class="unit">
+            {% for acronym, v in measurement_units %}
+                <option value="{{acronym}}">{{ v }}</option>
+            {% endfor %}
+          </select>
+        </div>
+      </div>      
+
       
-      <label>Unidade de medida: </label>
-      <select class="unit">
-        {% for acronym, v in measurement_units %}
-            <option value="{{acronym}}">{{ v }}</option>
-        {% endfor %}
-      </select>
+
+      
       
     </div>
     <div class="col-sm-9">
