--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -57,6 +57,7 @@
             <li><a href="{% url 'equipment:list' %}">Equipamentos</a></li>
             <li><a href="{% url 'sensor:list' %}">Sensores</a></li>
             <li><a href="{% url 'configuration:config' %}">Configurações</a></li>
+            <li><a href="{% url 'aes_rate:table' %}">AES</a></li>
             <li><a href="{% url 'goal:list' %}">Metas</a></li>
           </ul>
 
