--- a/aes_rate/templates/aes_rate/table.html
+++ b/aes_rate/templates/aes_rate/table.html
@@ -17,7 +17,10 @@
 {% block list_filters %}
 	<div class="form-group">
 		<a href="{% url 'aes_rate:refresh_rates' %}" class="btn btn-info"><i class="glyphicon glyphicon-refresh"></i></a>
-		<span class="help-text">Última atualização: {{last_update|date:"d/m/Y"}}</span>
+		<span class="help-text">
+			{% if latest_update %}Última atualização: {{last_update|date:"d/m/Y"}}
+			{% else %}Clique para atualizar
+			{% endif %}</span>
 	</div>
 {% endblock %}
 
