--- a/smrue/static/css/application.css
+++ b/smrue/static/css/application.css
@@ -3,16 +3,35 @@ body {
 	padding-bottom: 20px;
 }
 
+/* navbar */
+.navbar-default {
+    background-color: #4DB5E0;
+    border-bottom: 3px solid #D0D0D0;
+}
+.navbar-default .navbar-nav>li>a {
+    color: #F9F9F9;
+}
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+    color: #FFF;
+    background-color: rgb(66, 139, 202);
+}
+.navbar-default .navbar-brand {
+    color: #FFF;
+}
+
 /* Tables: */
-.table thead tr th  {
+.table thead tr th {
 	text-align: center;
 	vertical-align:middle;
 }
 .table tbody tr td {
 	vertical-align:middle;
 }
+.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th {
+    background-color: #FBFBFB;
+}
 .text-right {
-	text-align:right;
+  text-align:right;
 }
 
 .loading-gif{
