--- a/equipment/templates/equipment/list.html
+++ b/equipment/templates/equipment/list.html
@@ -27,8 +27,11 @@
 		<td>{{item.name}}</td>
 		<td>{{item.nominal_power}}</td>
 		<td class="text-center">
-			<button data-toggle="modal" data-target=".modal" class="delete-button" value="{% url 'equipment:delete' pk=item.pk %}">Remover</button>
-			<a class="btn btn-sm btn-default" title="Editar" href="{% url 'equipment:edit' pk=item.pk %}"><i class="glyphicon glyphicon-pencil"></i></a>
+      <div class="btn-group">
+				<button title="Remover" class="btn btn-danger" data-toggle="modal" data-target=".modal" value="{% url 'equipment:delete' pk=item.pk %}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+	      </button>
+				<a class="btn btn-default" title="Editar" href="{% url 'equipment:edit' pk=item.pk %}"><i class="glyphicon glyphicon-pencil"></i></a>
+			</div>
 		</td>
 	</tr>
 {% endfor %}
