--- a/goal/templates/goal/list.html
+++ b/goal/templates/goal/list.html
@@ -36,15 +36,15 @@
     <td>{{item.yearmonth_end}}</td>
     
     <td class="text-center">
-      <button class="btn btn-danger" data-toggle="modal" data-target=".modal" class="delete-button" value="{% url 'goal:delete' pk=item.pk %}">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-        Deletar
-      </button>
+      <div class="btn-group">
+        <button class="btn btn-danger" title="Remover" data-toggle="modal" data-target=".modal" value="{% url 'goal:delete' pk=item.pk %}">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+        </button>
 
-      <a class="btn btn-default" href="{% url 'goal:update' pk=item.pk %}">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-        Editar
-      </a>
+        <a class="btn btn-default" title="Editar" href="{% url 'goal:update' pk=item.pk %}">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </a>
+      </div>
     </td>
   </tr>
 {% endfor %}
