--- a/smrue/templates/base.html
+++ b/smrue/templates/base.html
@@ -19,12 +19,17 @@
 
     <title>{{page_title}}</title>
 
-    <link rel="stylesheet" type="text/css" href="{{application_css}}">
     <link rel="stylesheet" type="text/css" href="{{bootstrap_css}}">
+
+    {% block base_css %}
+
+    {% endblock %}
 
     {% block css %}
 
     {% endblock %}
+    
+    <link rel="stylesheet" type="text/css" href="{{application_css}}">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -36,6 +41,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" language="javascript" src="{{jquery_js}}"></script>
     <script type="text/javascript" language="javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+    {% block base_js %}
+
+    {% endblock %}
     
     {% block js %}
 
