--- a/smrue/templates/base_list.html
+++ b/smrue/templates/base_list.html
@@ -5,6 +5,43 @@
 <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.css">
 {% endblock %}
 
+{% block js_base %}
+<script type="text/javascript" language="javascript" src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" language="javascript" src="//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+<script type="text/javascript" language="javascript" src="//cdn.datatables.net/plug-ins/9dcbecd42ad/sorting/date-euro.js"></script>
+<script type="text/javascript" charset="utf-8">
+      $(document).ready(function() {
+        $('#main_table').dataTable({
+            language: {
+              "sEmptyTable": "Nenhum registro encontrado",
+              "sInfo": "Mostrando de _START_ até _END_ de _TOTAL_ registros",
+              "sInfoEmpty": "Mostrando 0 até 0 de 0 registros",
+              "sInfoFiltered": "(Filtrados de _MAX_ registros)",
+              "sInfoPostFix": "",
+              "sInfoThousands": ".",
+              "sLengthMenu": "_MENU_ resultados por página",
+              "sLoadingRecords": "Carregando...",
+              "sProcessing": "Processando...",
+              "sZeroRecords": "Nenhum registro encontrado",
+              "sSearch": "Pesquisar",
+              "oPaginate": {
+               "sNext": "&rsaquo;",
+               "sPrevious": "&lsaquo;",
+               "sFirst": "&laquo;",
+               "sLast": "&raquo;"
+              },
+              "oAria": {
+                 "sSortAscending": ": Ordenar colunas de forma ascendente",
+                 "sSortDescending": ": Ordenar colunas de forma descendente"
+              }
+            },
+            "pageLength": {% if items_per_page %}{{items_per_page}}{% else %}10{% endif %},
+            "iDisplayLength": {% if table_default_results %}{{ table_default_results }}{% else %}10{% endif %}
+          });
+      });
+</script>
+{% endblock %}
+
 {% block content %}
   <div class="container">
     <div class="page-header">
@@ -14,7 +51,7 @@
     {% block list_filters %}
     {% endblock %}
       
-    <table cellpadding="0" cellspacing="0" border="0" class="table {% if not remove_striped %} table-striped {% endif %} table-bordered">
+    <table id="main_table" cellpadding="0" cellspacing="0" border="0" class="table {% if not remove_striped %} table-striped {% endif %} table-bordered">
       {% block table_content %}
       {% endblock %}
     </table>
