--- a/smrue/templates/home.html
+++ b/smrue/templates/home.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="{{jqplot_css}}">
 	<style type="text/css">
 		.home-button, .home-button:focus {
-			background: rgb(26, 205, 217);
+			background: #4DB5E0;
 			line-height: 100px;
 			text-align: center;
 			color: white;
@@ -23,7 +23,7 @@
 		}
 
 		.home-button:hover {
-			background: rgb(26, 158, 167);
+			background: rgb(66, 139, 202);
 			text-decoration: none;
 			color: white;
 		}
