--- a/consumption/templates/consumption/graphic.html
+++ b/consumption/templates/consumption/graphic.html
@@ -9,6 +9,7 @@
 {% static "bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" as datetimepicker_css %}
 {% static "images/loading.gif" as loading_gif %}
 {% static "bootstrap-datepicker/css/bootstrap-datepicker.min.css" as datepicker_css %}
+{% static "consumption/css.css" as consumption_css %}
 
 <link href="{{daterangepicker_css}}" rel="stylesheet">
 <link href="{{jqplot_css}}" rel="stylesheet">
@@ -16,6 +17,7 @@
 <link href="{{timepicker_css}}" rel="stylesheet">
 <link href="{{datetimepicker_css}}" rel="stylesheet">
 <link href="{{datepicker_css}}" rel="stylesheet">
+<link href="{{consumption_css}}" rel="stylesheet">
 {% endblock %}
 
 {% block js %}
@@ -63,33 +65,40 @@
   {% endif %}
 
   <div class="row">
-    <div class="col-sm-3">
+    
+    <div class="col-sm-12">
+      <div class="loading-gif"></div>
+      <div id="chart"></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-6">
 
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Hora</a></li>
-        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Dia</a></li>
-        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Mês</a></li>
-        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Integrar</a></li>
+        <li role="presentation"><a href="#hour" aria-controls="hour" role="tab" data-toggle="tab">Hora</a></li>
+        <li role="presentation" class="active"><a href="#day" aria-controls="day" role="tab" data-toggle="tab">Dia</a></li>
+        <li role="presentation"><a href="#month" aria-controls="month" role="tab" data-toggle="tab">Mês</a></li>
       </ul>
 
       <!-- Tab panes -->
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="home">
+        <div role="tabpanel" class="tab-pane" id="hour">
           <div class="col-sm-12">
             <!-- Filtro por hora -->
             <label>Data (por hora): </label><input class="date-time-range-picker form-control"/>
             <button class="hourly-plot">Faz o grafico pra mim (hora)</button>
           </div>
         </div>
-        <div role="tabpanel" class="tab-pane" id="profile">
+        <div role="tabpanel" class="tab-pane active" id="day">
           <div class="col-sm-12">
             <!-- Filtro por dia -->
             <label>Data (por dia): </label><input class="date-range-picker form-control"/>
             <button class="daily-plot">Faz o grafico pra mim (dia)</button>
           </div>
         </div>
-        <div role="tabpanel" class="tab-pane" id="messages">
+        <div role="tabpanel" class="tab-pane" id="month">
           <div class="col-sm-12">
             <!-- Filtro por mês -->
             <label>Data (por mês): </label>
@@ -116,34 +125,26 @@
           </select>
         </div>
       </div>      
-
-      
-
-      
-      
     </div>
-    <div class="col-sm-9">
-      <div class="loading-gif"></div>
-      <div id="chart" ></div>
-      <div class="row clearfix" id="attachment_form">
-        <form action="{% url 'consumption:importCSV' %}" method="POST" enctype="multipart/form-data" id="uploadform">
-            {% csrf_token %}
-            <label>Escolha um arquivo:</label><input name="csv" type="file">
-            {% if csv_error%}
-              {{csv_error}}
-            {% endif %}
-            <div class="form-group">
-                <input type="submit" class="btn btn-info" value="Importar">
-            </div>
-        </form>
 
-        <form action="{% url 'consumption:exportCSV' %}" method="GET" enctype="multipart/form-data" id="uploadform">
-            {% csrf_token %}
-            <div class="form-group">
-                <input type="submit" class="btn btn-info" value="Exportar">
-            </div>
-        </form>
-      </div>
+    <div class="col-sm-6" id="attachment_form">
+      <form action="{% url 'consumption:importCSV' %}" method="POST" enctype="multipart/form-data" id="uploadform">
+          {% csrf_token %}
+          <label>Escolha um arquivo:</label><input name="csv" type="file">
+          {% if csv_error%}
+            {{csv_error}}
+          {% endif %}
+          <div class="form-group">
+              <input type="submit" class="btn btn-info" value="Importar">
+          </div>
+      </form>
+
+      <form action="{% url 'consumption:exportCSV' %}" method="GET" enctype="multipart/form-data" id="uploadform">
+          {% csrf_token %}
+          <div class="form-group">
+              <input type="submit" class="btn btn-info" value="Exportar">
+          </div>
+      </form>
     </div>
   </div>
 
