--- a/sensor/templates/sensor/list.html
+++ b/sensor/templates/sensor/list.html
@@ -28,7 +28,9 @@
 				<button title="Remover" class="btn btn-danger" data-toggle="modal" data-target=".modal" value="{% url 'sensor:delete' pk=item.pk %}">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 				</button>
-				
+				<a class="btn btn-default" title="Editar" href="{% url 'sensor:edit' pk=item.pk %}">
+					<i class="glyphicon glyphicon-pencil"></i>
+				</a>
 			</div>
 		</td>
 	</tr>
